@@ -1,5 +1,6 @@
 2006-04-12 Sandro Santilli <strk@refractions.net>
 
+	* geos::simplify:LineSegmentIndex class
 	* geos::simplify:TaggedLineSegment class
 	* geos::simplify:TaggedLineString class
 	* geos::io::WKBReader: added default constructor
